src/index.css
@import 'tailwindcss/base';
@import 'tailwindcss/components';
@import 'tailwindcss/utilities';

@layer base {
  html {
    -webkit-tap-highlight-color: transparent;
  }
}

/* Without this, the sidebar doesn't scroll until the unterlying editor has stopped its inertia :( */
@layer utilities {
  .fix-ios-scroll {
    -webkit-overflow-scrolling: touch;
  }
}

